--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         </div>
     </div>
     <!-- end header-->
+
     <!-- start landing-->
     <div class="landing">
         <div class="intro-text">
@@ -57,6 +58,7 @@
             <p>We are leon - super creative & minimal agency web template</p>
         </div>
     </div>
+    <!-- end landing-->
 
     <!-- start features-->
     <div class="features">
